package Question1;

public enum ComposantType {
    FICHIER, REPERTOIRE
}
