package Question1;

public class Fichier implements Composant {
    public Fichier(String name, Owner owner) {
        super();
    }

    @Override
    public String getName() {
        return null;
    }

    @Override
    public Owner getOwner() {
        return null;
    }

    @Override
    public void setOwner(Owner owner, Boolean recursive) {

    }

    @Override
    public Integer getSize() {
        return null;
    }

    @Override
    public String getContent() {
        return null;
    }

    @Override
    public void appendContent(String name) {

    }

    @Override
    public boolean isComposite() {
        return false;
    }
}
